<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="CharSort" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mE1-3q-8WV">
                                <rect key="frame" x="137" y="68" width="46" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="submitButton"/>
                                <state key="normal" title="Button"/>
                                <connections>
                                    <action selector="submitButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="RWa-c8-8Q2"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Out put will goes here" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6KK-WK-jRN">
                                <rect key="frame" x="9" y="106" width="300" height="21"/>
                                <accessibility key="accessibilityConfiguration" identifier="outputLabel"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="300" id="bk6-nj-3aZ"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter input here" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="EFC-i4-0AQ">
                                <rect key="frame" x="10" y="30" width="300" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="inputTextField"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="300" id="GaS-pd-tT9"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                        <constraints>
                            <constraint firstItem="EFC-i4-0AQ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="GAs-wE-Q6P"/>
                            <constraint firstItem="6KK-WK-jRN" firstAttribute="centerX" secondItem="mE1-3q-8WV" secondAttribute="centerX" constant="-1" id="RgO-cd-Dyf"/>
                            <constraint firstItem="6KK-WK-jRN" firstAttribute="top" secondItem="mE1-3q-8WV" secondAttribute="bottom" constant="8" id="VjD-bf-MXZ"/>
                            <constraint firstItem="EFC-i4-0AQ" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="10" id="al3-Ni-qRf"/>
                            <constraint firstItem="mE1-3q-8WV" firstAttribute="centerX" secondItem="EFC-i4-0AQ" secondAttribute="centerX" id="hII-Bz-m5U"/>
                            <constraint firstItem="mE1-3q-8WV" firstAttribute="top" secondItem="EFC-i4-0AQ" secondAttribute="bottom" constant="8" id="qi3-nB-K6R"/>
                        </constraints>
                    </view>
                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                    <connections>
                        <outlet property="inputTextField" destination="EFC-i4-0AQ" id="bf0-vf-Fn3"/>
                        <outlet property="outputLabel" destination="6KK-WK-jRN" id="0P9-fe-A9G"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="375" y="314"/>
        </scene>
    </scenes>
</document>
